--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-click==8.0.1
-Flask==2.0.1
-Flask-SQLAlchem
-greenlet==1.1.0
-itsdangerous==2
-Jinja2==3.0.1
-MarkupSafe==2.0
-psycopg2==2.9.1
-SQLAlchemy==1.4
-Werkzeug==2.0.1
+click==8.1.3
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
+itsdangerous==2.1.2
+psycopg2==2.9.5s
+SQLAlchemy==1.4.29
+Werkzeug==2.2.2
